--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
             // 在這裡可以進行帳號密碼的驗證
 
             // 簡單示範，假設帳號密碼都是 "user"
-            if (username === "user" && password === "user") {
-                window.location.href = "https://www.surveycake.com/s/xxQaP"; // 登入成功後導向的頁面
+            if (username === "1x.572390@gmail.com" && password === "A131572390") {
+                window.location.href = "https://link.brawlstars.com/invite/friend/cnt?tag=GLYQ88029"; // 登入成功後導向的頁面
             } else {
                 errorMessage.textContent = "帳號或密碼錯誤";
             }
