--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h1>歡迎登入</h1>
+        <h1>歡迎登入，登入後可加我的荒野亂鬥好友</h1>
         <form id="loginForm">
             <label for="username">帳號:</label>
             <input type="text" id="username" required>
