--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h1>歡迎登入，登入後可加我的荒野亂鬥好友</h1>
+        <h1>歡迎登入</h1>
         <form id="loginForm">
             <label for="username">帳號:</label>
             <input type="text" id="username" required>
@@ -104,8 +104,12 @@
             // 在這裡可以進行帳號密碼的驗證
 
             // 簡單示範，假設帳號密碼都是 "user"
-            if (username === "1x.572390@gmail.com" && password === "A131572390") {
+            if (username === "brawl" && password === "stars") {
                 window.location.href = "https://link.brawlstars.com/invite/friend/cnt?tag=GLYQ88029"; // 登入成功後導向的頁面
+            } else {
+                errorMessage.textContent = "帳號或密碼錯誤";
+            if (username === "twitter && password === "twitter") {
+                window.location.href = "https://twitter.com/1x_572390"; // 登入成功後導向的頁面
             } else {
                 errorMessage.textContent = "帳號或密碼錯誤";
             }
