--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>簡易登入系統</title>
+    <title>登入借書系統</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -65,6 +65,7 @@
 <body>
     <div class="login-container">
         <h1>歡迎登入</h1>
+        <p>登入後，即可編輯。（必須登入Gmail）</p>
         <form id="loginForm">
             <label for="username">帳號:</label>
             <input type="text" id="username" required>
@@ -104,12 +105,8 @@
             // 在這裡可以進行帳號密碼的驗證
 
             // 簡單示範，假設帳號密碼都是 "user"
-            if (username === "brawl" && password === "stars") {
-                window.location.href = "https://link.brawlstars.com/invite/friend/cnt?tag=GLYQ88029"; // 登入成功後導向的頁面
-            } else {
-                errorMessage.textContent = "帳號或密碼錯誤";
-            if (username === "twitter && password === "twitter") {
-                window.location.href = "https://twitter.com/1x_572390"; // 登入成功後導向的頁面
+            if (username === "admin" && password === "admin") {
+                window.location.href = "https://sites.google.com/d/1mFmOb1loORvja29pxi0M3S_8acGBiYph/p/1vwulI57VVcbaxfB26OI2IdbmoGTc2ihw/edit; // 登入成功後導向的頁面
             } else {
                 errorMessage.textContent = "帳號或密碼錯誤";
             }
