--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
             // 簡單示範，假設帳號密碼都是 "user"
             if (username === "admin" && password === "admin") {
                 window.location.href = "https://sites.google.com/d/1mFmOb1loORvja29pxi0M3S_8acGBiYph/p/1vwulI57VVcbaxfB26OI2IdbmoGTc2ihw/edit; // 登入成功後導向的頁面
-            } else {
+            } 
+            else {
                 errorMessage.textContent = "帳號或密碼錯誤";
             }
         });
